--- a/projects/recipe-book/beef-stew/index.html
+++ b/projects/recipe-book/beef-stew/index.html
@@ -10,7 +10,7 @@
         <h3>- Sarah Cook</h3>
         <img>
         <hr>
-            <h2>Prep Time:<i> 15 min</i> Estimated Time:<i> 3 hrs - 3 hrs & 50 mins</i> 
+            <h2>Prep Time:<i> 15 min</i> Estimated Time:<i> 3 hrs - 3 hrs & 50 mins</i></h2>
             <h3>Easy Recipe - Serves 5</h3>
         <hr>
     <body>
