--- a/projects/recipe-book/chicken-marsala/index.html
+++ b/projects/recipe-book/chicken-marsala/index.html
@@ -7,47 +7,67 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <h1>Divine Recipes - Chicken Marsala</h1>
-    <h3>- Sarah Cook</h3>
+    <h3>- Sara Haas</h3>
     <img>
     <hr>
-        <h2>Prep Time:<i> 15 min</i> Estimated Time:<i> 3 hrs - 3 hrs & 50 mins</i> 
-        <h3>Easy Recipe - Serves 5</h3>
+        <h2>Prep Time:<i> 10 min</i> Estimated Time:<i> 20 mins</i> 
+        <h3>Easy Recipe - Serves 4</h3>
     <hr>
 <body>
     <h2>Ingredients</h2>
         <ul>
-            <li>2 celery sticks<br><sub>thickly sliced</sub></li>
-            <li>1 onion<br><sub>chopped</sub></li>
-            <li>2 large carrots<br><sub>halved lengthways then very chunkily sliced</sub></li>
-            <li>5 bay leaves</li>
-            <li>2 thyme sprigs<br><sub>1 whole and 1 leaves picked</sub></li>
-            <li>1 tbsp vegetable oil</li>
-            <li>1 tbsp butter</li>
-            <li>2 tbsp plain flour</li>
-            <li>2 tbsp tomato purée</li>
-            <li>2 tbsp Worcestershire sauce</li>
-            <li>2 beef stock cubes<br><sub>crumbled</sub></li>
-            <li>850g stewing beef<br><sub>(featherblade or brisket works nicely), cut into nice large chunks
-            </sub></li>
+            <li>2 (6-ounce) boneless, skinless chicken breasts (or 4 chicken breast cutlets)</li>
+            <li>Salt and freshly ground black pepper, to taste</li>
+            <li>1/4 cup plus 1 tablespoon all-purpose flour, divided</li>
+            <li>3 tablespoons extra virgin olive oil, divided</li>
+            <li>2 tablespoons unsalted butter, divided</li>
+            <li>8 ounces cremini or button mushrooms, cleaned and thinly sliced</li>
+            <li>2 cloves garlic, minced</li>
+            <li>2/3 cup dry Marsala wine</li>
+            <li>2/3 cup low-sodium chicken broth or water</li>
+            <li>2 sprigs fresh thyme (or 1/4 teaspoon dried thyme leaves)</li>
+            <li>1 tablespoon finely chopped parsley, optional, for garnish</li>
         </ul>
     <h2>Method</h2>
         <ol>
-            <li>Heat oven to 160C/140C fan/gas 3 and put the kettle on.</li>
-            <li>Put 2 thickly sliced celery sticks, 1 chopped onion, 2 chunkily sliced carrots, 5<br>
-                bay leaves and 1 whole thyme sprig in a flameproof casserole dish with 1 tbsp<br>
-                vegetable oil and 1 tbsp butter.
+            <li>Pat the chicken dry with paper towels. Slice each breast in half<br>
+                horizontally, forming 4 chicken breast cutlets.<br>
+                <sub>(Skip this part if using cutlets.)<br>
+                    Place between two large pieces of parchment paper and pound<br> 
+                    lightly to 1/4-inch thickness using a meat mallet or rolling pin.<br>
+                    Remove the top sheet of parchment and transfer the chicken<br>
+                    on the bottom piece of parchment to a large baking sheet.
+                </sub>
             </li>
-            <li>Soften for 10 mins, then stir in 2 tbsp plain flour until it doesn’t look dusty<br>
-                anymore, followed by 2 tbsp tomato purée, 2 tbsp Worcestershire sauce and 2<br>
-                crumbled beef stock cubes.
+            <li>Season the chicken with salt and pepper. Place 1/4 cup flour in<br>
+                a shallow bowl. Scatter and dust both sides of each chicken<br>
+                cutlet with flour. Shake off any excess and transfer to a new<br>
+                piece of parchment. Roll up the flour-covered parchment and<br>
+                throw it away.
             </li>
-            <li>Gradually stir in 600ml hot water, then tip in 850g stewing beef and bring to a<br>
-                gentle simmer.
+            <li>Set a large, preferably 12-inch cast-iron skillet or similar pan<br>
+                over medium-high heat. Add 2 tablespoons oil and 1<br>
+                tablespoon butter.<br>
+                Once the butter has melted, add the chicken cutlets to the pan<br>
+                in a single layer. Cook until golden brown, about 4 minutes,<br>
+                then flip and cook 4 more minutes. Transfer to a serving plate<br>
+                and cover with foil.
             </li>
-            <li>Cover and put in the oven for 2hrs 30 mins, then uncover and cook for 30mins<br>
-                – 1hr more until the meat is really tender and the sauce is thickened.
+            <li>Add the remaining 1 tablespoon oil and the mushrooms to the<br>
+                pan and cook, stirring occasionally until golden brown, about 4<br>
+                minutes. Add the garlic and the remaining 1 tablespoon of<br>
+                flour and cook until the garlic is fragrant, about 30 seconds.<br>
+                <br>
+                Add the Marsala and simmer until reduced by half, about 1<br>
+                minute, scraping up any browned bits from the pan. Add the<br>
+                broth and thyme and cook until slightly thickened, 3 to 4<br>
+                minutes. Add the remaining tablespoon of butter and swirl to<br>
+                melt and combine. Remove from the heat.
             </li>
-            <li>Garnish with the picked leaves of the remaining thyme sprig.</li>
+            <li>Add the chicken back to the pan and spoon the sauce over, or<br>
+                pour the sauce over the chicken on its platter. Garnish with<br>
+                parsley, if using, and serve.
+            </li>
         </ol>
 </body>
 </html>
