--- a/projects/recipe-book/index.html
+++ b/projects/recipe-book/index.html
@@ -5,7 +5,222 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Divine Recipes</title>
 </head>
+<h1>Divine Recipes</h1>
+<br>
+<h4>
+    <h2>Beef Stew</h2>
+    <h4>- Sarah Cook</h4>
+    <img>
+    <hr>
+        <h3>Prep Time:<i> 15 min</i> Estimated Time:<i> 3 hrs - 3 hrs & 50 mins</i></h3>
+        <h4>Easy Recipe - Serves 5</h4>
+    <hr>
 <body>
-    
+    <h3>Ingredients</h3>
+        <ul>
+            <li>2 celery sticks<br><sub>thickly sliced</sub></li>
+            <li>1 onion<br><sub>chopped</sub></li>
+            <li>2 large carrots<br><sub>halved lengthways then very chunkily sliced</sub></li>
+            <li>5 bay leaves</li>
+            <li>2 thyme sprigs<br><sub>1 whole and 1 leaves picked</sub></li>
+            <li>1 tbsp vegetable oil</li>
+            <li>1 tbsp butter</li>
+            <li>2 tbsp plain flour</li>
+            <li>2 tbsp tomato purée</li>
+            <li>2 tbsp Worcestershire sauce</li>
+            <li>2 beef stock cubes<br><sub>crumbled</sub></li>
+            <li>850g stewing beef<br><sub>(featherblade or brisket works nicely), cut into nice large chunks
+            </sub></li>
+        </ul>
+    <h3>Method</h3>
+        <ol>
+            <li>Heat oven to 160C/140C fan/gas 3 and put the kettle on.</li>
+            <li>Put 2 thickly sliced celery sticks, 1 chopped onion, 2 chunkily sliced carrots, 5<br>
+                bay leaves and 1 whole thyme sprig in a flameproof casserole dish with 1 tbsp<br>
+                vegetable oil and 1 tbsp butter.
+            </li>
+            <li>Soften for 10 mins, then stir in 2 tbsp plain flour until it doesn’t look dusty<br>
+                anymore, followed by 2 tbsp tomato purée, 2 tbsp Worcestershire sauce and 2<br>
+                crumbled beef stock cubes.
+            </li>
+            <li>Gradually stir in 600ml hot water, then tip in 850g stewing beef and bring to a<br>
+                gentle simmer.
+            </li>
+            <li>Cover and put in the oven for 2hrs 30 mins, then uncover and cook for 30mins<br>
+                – 1hr more until the meat is really tender and the sauce is thickened.
+            </li>
+            <li>Garnish with the picked leaves of the remaining thyme sprig.</li>
+        </ol>
 </body>
+<br>
+<h2>Divine Recipes - Chicken Marsala</h2>
+<h4>- Sara Haas</h4>
+<img>
+<hr>
+    <h3>Prep Time:<i> 10 min</i> Estimated Time:<i> 20 mins</i></h3>
+    <h4>Easy Recipe - Serves 4</h4>
+<hr>
+<body>
+<h2>Ingredients</h2>
+    <ul>
+        <li>2 (6-ounce) boneless, skinless chicken breasts (or 4 chicken breast cutlets)</li>
+        <li>Salt and freshly ground black pepper, to taste</li>
+        <li>1/4 cup plus 1 tablespoon all-purpose flour, divided</li>
+        <li>3 tablespoons extra virgin olive oil, divided</li>
+        <li>2 tablespoons unsalted butter, divided</li>
+        <li>8 ounces cremini or button mushrooms, cleaned and thinly sliced</li>
+        <li>2 cloves garlic, minced</li>
+        <li>2/3 cup dry Marsala wine</li>
+        <li>2/3 cup low-sodium chicken broth or water</li>
+        <li>2 sprigs fresh thyme (or 1/4 teaspoon dried thyme leaves)</li>
+        <li>1 tablespoon finely chopped parsley, optional, for garnish</li>
+    </ul>
+<h2>Method</h2>
+    <ol>
+        <li>Pat the chicken dry with paper towels. Slice each breast in half<br>
+            horizontally, forming 4 chicken breast cutlets.<br>
+            <sub>(Skip this part if using cutlets.)<br>
+                Place between two large pieces of parchment paper and pound<br> 
+                lightly to 1/4-inch thickness using a meat mallet or rolling pin.<br>
+                Remove the top sheet of parchment and transfer the chicken<br>
+                on the bottom piece of parchment to a large baking sheet.
+            </sub>
+        </li>
+        <li>Season the chicken with salt and pepper. Place 1/4 cup flour in<br>
+            a shallow bowl. Scatter and dust both sides of each chicken<br>
+            cutlet with flour. Shake off any excess and transfer to a new<br>
+            piece of parchment. Roll up the flour-covered parchment and<br>
+            throw it away.
+        </li>
+        <li>Set a large, preferably 12-inch cast-iron skillet or similar pan<br>
+            over medium-high heat. Add 2 tablespoons oil and 1<br>
+            tablespoon butter.<br>
+            Once the butter has melted, add the chicken cutlets to the pan<br>
+            in a single layer. Cook until golden brown, about 4 minutes,<br>
+            then flip and cook 4 more minutes. Transfer to a serving plate<br>
+            and cover with foil.
+        </li>
+        <li>Add the remaining 1 tablespoon oil and the mushrooms to the<br>
+            pan and cook, stirring occasionally until golden brown, about 4<br>
+            minutes. Add the garlic and the remaining 1 tablespoon of<br>
+            flour and cook until the garlic is fragrant, about 30 seconds.<br>
+            <br>
+            Add the Marsala and simmer until reduced by half, about 1<br>
+            minute, scraping up any browned bits from the pan. Add the<br>
+            broth and thyme and cook until slightly thickened, 3 to 4<br>
+            minutes. Add the remaining tablespoon of butter and swirl to<br>
+            melt and combine. Remove from the heat.
+        </li>
+        <li>Add the chicken back to the pan and spoon the sauce over, or<br>
+            pour the sauce over the chicken on its platter. Garnish with<br>
+            parsley, if using, and serve.
+        </li>
+    </ol>
+</body>
+<br>
+<h2>Divine Recipes - Rabbit Stew</h2>
+<h4>- Hank Shaw</h4>
+<img>
+<hr>
+    <h3>Prep Time:<i> 45 min</i> Estimated Time:<i> 1 hr & 45 mins</i></h3>
+    <h4>Complex Recipe - Serves 4</h>
+<hr>
+<body>
+<h3>Ingredients</h3>
+    <ul>
+        <li>1 ounce dried porcini mushrooms</li>
+        <li>2 heads garlic</li>
+        <li>1 tablespoon extra virgin olive oil</li>
+        <li>1 1/2 pounds mixed mushrooms</li>
+        <li>4 tablespoons unsalted butter</li>
+        <li>1 rabbit</li>
+        <li>3 large shallots<br><sub>chopped</sub></li>
+        <li>1 cup sherry or white wine</li>
+        <li>1 to 2 cups mushroom soaking water</li>
+        <li>3 cups chicken stock</li>
+        <li>1 tablespoon fresh thyme or 2 teaspoons dried</li>
+        <li>1 large parsnip, peeled and chopped into large pieces</li>
+        <li>Salt</li>
+        <li>2 tablespoons chopped fresh parsley</li>
+    </ul>
+<h2>Method</h2>
+    <ol>
+        <li>Preheat the oven to 375°F</li>
+        <li>Slice the top third off the heads of garlic and drizzle the olive<br>
+            oil over them. Wrap the heads loosely in foil and bake for 45<br>
+            minutes to an hour, or until cloves are soft and brown.<br>
+            Set aside to cool.
+        </li>
+        <li>Meanwhile, soak the dried porcini mushrooms in 2 cups hot<br>
+            water.
+        </li>
+        <li>Cut the rabbit into serving pieces and salt well. Let sit at room<br>
+            temperature for 30 minutes as the garlic finishes roasting. Use<br>
+            all of the rabbit in this dish<br>
+            <sub>you can fish out the ribs and other parts that have little or<br>
+                no meat on them later; they will add vital flavor to your stew
+            </sub>
+        </li>
+        <li>If you are going to make the crème fraiche-liver thickener<br>
+            mince the rabbit liver finely and move it to a small bowl.<br>
+            Vigorously mix in about 1 1/2 tablespoons crème fraiche or<br>
+            sour cream. Now put the mixture into a fine-meshed sieve over<br>
+            a bowl and push it through with a rubber spatula. Reserve in<br>
+            the fridge.
+        </li>
+        <li>Chop off the tough ends of the mushroom stems and either<br>
+            discard or save for stock. Roughly chop or slice the<br>
+            mushrooms and set aside. Dice the rehydrated porcini. Pour<br>
+            the porcini soaking water through a paper towel into another<br>
+            bowl. Reserve the liquid.
+        </li>
+        <li>Heat a thick-bottomed large pot on high heat for 1 minute. Add<br>
+            the mushrooms and shake the pot. Stirring continuously, dry<br>
+            sauté the mushrooms until they release their water.<br>
+            Turn the heat down to medium-high. Use a wooden spoon to<br>
+            scrape up any mushroom bits off the bottom of the pan. Salt<br>
+            the mushrooms lightly. When the mushroom liquid is mostly<br>
+            gone, remove them to a bowl.<br>
+        </li>
+        <li>Add the butter to the pot. When the butter melts, turn the heat<br>
+            down to medium. Pat the rabbit pieces dry and place in the pan.<br>
+            Work in batches if you need to, do not crowd the pan. Brown<br>
+            the pieces well on all sides. Remove the rabbit pieces from the<br>
+            pot and set aside.<br>
+        </li>
+        <li>Increase the heat to medium-high and add the shallots to the<br>
+            pot. Sauté until the shallots are nicely wilted, about 3 minutes.<br>
+            Stir from time to time. Sprinkle salt over everything.
+        </li>
+        <li>While the shallots are cooking, squeeze the roasted garlic into<br>
+            the mushroom soaking water you have strained, then whisk it<br>
+            together.
+        </li>
+        <li>Add the sherry or white wine to the shallots in the pot. Use a<br>
+            wooden spoon to scrape off any browned bits on the bottom<br>
+            of the pot. Let the sherry boil down by half. Add the<br>
+            mushroom-roasted garlic mixture and the stock and stir to<br>
+            combine.
+        </li>
+        <li>Add the thyme, all the mushrooms, the rabbit, and the parsnips<br>
+            and bring everything to a bare simmer.<br>
+            Simmer gently for 90 minutes. You want the meat to be close<br>
+            to falling off the bone. If you want, you can fish out all the<br>
+            rabbit pieces and pull the meat off the bone<br>
+            <sub>it makes the dish less attractive, but it will be easier to<br>
+                eat.Taste for salt right before you serve and add if<br>
+                needed.Stir in the parsley.
+            </sub>
+        </li>
+        <li>If you are using the crème fraiche-liver mixture to thicken your<br>
+            stew, turn off the heat. When the stew stops bubbling, add the<br>
+            mixture and let it heat through for a minute before serving.<br>
+            Do not allow the stew to boil once the liver-crème fraiche<br>
+            mixture is in it or it will curdle.<br>
+        </li>
+        <li>Serve with a crusty loaf of bread, a green salad, and either a<br>
+            hearty white wine, a dry rose, or a light red wine.
+        </li>
+    </ol>
+
 </html>
