--- a/projects/studio-gallery/index.html
+++ b/projects/studio-gallery/index.html
@@ -25,13 +25,22 @@
 
                     <div class="pic2">
                         <!-- Add your code for your 1st poster/piece here -->
-                        <img>
+                        <img> <sh3 class="png"></sh3>
                         
                     </div>
 
                     <div class="frame1">
                         <!-- Add your code for your 1st poster/piece here -->
-                        <img>
+                        <h2>
+                            The Best Recent Gaming Adaptations
+                        </h2>
+                        <p>
+                            Good game adaptations into film have sucked over 
+                            the past few decades, yet franchises like Mario,
+                            Sonic and Minecraft have all fought to change that.
+                            Thanks to them, we've truly gained something 
+                            beautiful.
+                        </p>
                     </div>
 
                 </div>
