--- a/exercises/metube/index.html
+++ b/exercises/metube/index.html
@@ -49,21 +49,21 @@
                 -->
                 <h2>Home Feed</h2>
                 <div id="tn1">
-                    <img id="tn1"src="tn1.png">
+                    <img id="tn1"src="images/tn1.png" width="1600px" height="900px">
                     <div id="tn4">
-                        <img id="tn4"src="tn4.png">
+                        <img id="tn4"src="images/tn4.png" width="1600" height="900">
                     </div>
                 </div>
                 <div id="tn2">
-                    <img id="tn2"src="tn2.png">
+                    <img id="tn2"src="images/tn2.png" width="1600" height="900">
                     <div id="tn5">
-                        <img id="tn5"src="tn5.png">
+                        <img id="tn5"src="images/tn5.png" width="1600" height="900">
                     </div>
                 </div>
                 <div id="tn3">
-                    <img id="tn3"src="tn3.png">
+                    <img id="tn3"src="images/tn3.png" width="1600" height="900">
                     <div id="tn6">
-                        <img id="tn6"src="tn6.png">
+                        <img id="tn6"src="images/tn6.png" width="1600" height="900">
                     </div>
                 </div>
             </div>
