--- a/projects/mebay-product-page/index.html
+++ b/projects/mebay-product-page/index.html
@@ -9,12 +9,12 @@
     <body>
         <div id="page-layout">
             <div id="column-one">
-                <img src="images/tn1.png" alt="tn1.png" width="170.5"> 
+                <img id="tn1" src="images/tn1.png" alt="tn1.png" width="170.5"> 
                 <br>
-                <img src="images/tn2.png" alt="tn2.png" width="170.5">
+                <img id="tn2" src="images/tn2.png" alt="tn2.png" width="170.5">
             </div>
             <div id="column-two">
-                <img src="images/main.png" alt="main.png" width="610">
+                <img id="tn3" src="images/main.png" alt="main.png" width="610">
             </div>
             <div id="column-three">
                 sdjfjhjhk
