--- a/exercises/wiki-page-1/index.html
+++ b/exercises/wiki-page-1/index.html
@@ -10,7 +10,16 @@
     <h1>From Wikipedia, the free encyclopedia</h1>
     <body>
         <p1>
-            <b>Crown Shynes</b><i> (also canopy disengagement<sup>[1]</sup>, canopy shyness<sup>[2]</sup>, or inter-crown spacing<sup>[3]</sup>)
+            <image id="sc" src="images/cs.png" width="400" height="300">
+            <b>Crown Shynes</b><i> (also canopy disengagement<sup>[1]</sup>,
+             canopy shyness<sup>[2]</sup>, or inter-crown spacing<sup>[3]</sup>)
+             is a phenomenon observed in some tree species, in which the crowns 
+             of fully stocked trees do not touch each other, forming a canopy with 
+             channel-like gaps.[4][5] The phenomenon is most prevalent among trees
+              of the same species, but also occurs between trees of different species.
+              [6][7] There exist many hypotheses as to why crown shyness is an 
+              adaptive behavior, and research suggests that it might inhibit spread of 
+              leaf-eating insect larvae.[8]
         </p1>
         
     </body>
