--- a/projects/dropdown-menu-site/index.html
+++ b/projects/dropdown-menu-site/index.html
@@ -7,6 +7,79 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        
+        <div id="navbar">
+            <a id="logo" href="#">AdoptMePlz<img></a>
+            <div class="dropdown-container">
+                <a href="#">Gallery <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
+                <div class="dropdown-menu">
+                    <a href="#">Little Buddies</a>
+                    <a href="#">Exotics</a>
+                </div>
+            </div>
+            <div class="dropdown-container">
+                <a href="#">About <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
+                <div class="dropdown-menu">
+                    <a href="#">Our Mission</a>
+                    <a href="#">Locations</a>
+                    <a href="#">Sitemap</a>
+                </div>
+            </div>
+            <div class="dropdown-container">
+                <a href="#">Contact <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
+                <div class="dropdown-menu">
+                    <a href="#">Company Number</a>
+                    <a href="#">LinkTree</a>
+                    <a href="#">Place for Adoption</a>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div id="row-1">
+            <div class="card">
+                <a>
+                 <img src="images/romulus.png" alt="romulus" width="320px" height="427">
+                 <h4>Romulus</h4>
+                 <button class="content">Learn More</button>
+                </a>
+            </div>
+            <div class="card" id="card-2">
+                <a>
+                    <img src="images/toothless-has-always-been-cute-v0-cs452ufwrg8e1.webp" alt="toothless-has-always-been-cute-v0-cs452ufwrg8e1" width="320px" height="427">
+                    <h4>Toothless</h4>
+                 <button class="content">Learn More</button>
+                </a>
+            </div>
+            <div class="card">
+                <a>
+                    <img src="images/remus.png" alt="remus" width="320px" height="427">
+                    <h4>Remus</h4>
+                 <button class="content">Learn More</button>
+                </a>
+            </div>
+        </div>
+        <br>
+        <div id="row-2">
+            <div class="card">
+                <a>
+                 <img src="images/trashcan.png" alt="trashcan" width="320px" height="427">
+                 <h4>Trashcan</h4>
+                 <button class="content">Learn More</button>
+                </a>
+            </div>
+            <div class="card" id="card-2">
+                <a>
+                    <img src="images/taiga.png" alt="taiga" width="320px" height="427">
+                    <h4>Taiga</h4>
+                 <button class="content">Learn More</button>
+                </a>
+            </div>
+            <div class="card">
+                <a>
+                    <img src="images/mug.png" alt="mug" width="320px" height="427">
+                    <h4>Mug</h4>
+                 <button class="content">Learn More</button>
+                </a>
+            </div>
+        </div>
     </body>
 </html>
