--- a/projects/dropdown-menu-site/index.html
+++ b/projects/dropdown-menu-site/index.html
@@ -7,6 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
+        
         <div id="navbar">
             <a id="logo" href="#">AdoptMePlz<img src="images/logo.png" alt="logo" width="25"></a>
             <div class="dropdown-container">
@@ -32,6 +33,11 @@
                     <a href="#">Place for Adoption</a>
                 </div>
             </div>
+        </div>
+        <div id="header">
+            <br>
+            <h1>Make a new <br>friend today!</h1><button class="headerbutton">View Gallery</button>
+            <br>
         </div>
         <br>
         <div id="row-1">
@@ -60,7 +66,7 @@
         <br>
         <div id="row-2">
             <div class="card">
-                <a>
+                <a href="trashcan.html">
                  <img src="images/trashcan.png" alt="trashcan" width="320px" height="427">
                  <h4>Trashcan</h4>
                  <button class="content">Learn More</button>
