--- a/projects/final-eval/index.html
+++ b/projects/final-eval/index.html
@@ -9,9 +9,12 @@
     <body>
         <div class="center-column">
             <br>
-            <h4>John and Jane Smith's</h4>
+            <h6>John and Jane Smith's</h6>
+
             <h1>Super Bowl LVIII</h1>
-            <h4>Extravaganza Party</h4>
+            <br>
+            <h3>Extravaganza Party</h3>
+            <br>
             <div class="contenders">
                 <div id="card">
                     <a>
@@ -27,13 +30,19 @@
                         <h3>Jacksonville<br>Jaguars</h3>
                     </a>
                 </div>
-                
-                    <h2>Feb 11 2024 @ 6pm</h2>
-                    <h4>Join us for the Ultimate Super Bowl Sunday Bash</h4>
-                    <h4>We'll have hot food, cold drinks, and big screens; all that's missing is you!</h4>
-                    <h6>The party will be at 1234 Main St, Anytown, USA</h6>
-               
             </div>
+            <br>
+            <h2>Feb 11 2024 @ 6pm</h2>
+            <p><b>Join us for the Ultimate Super Bowl Sunday Bash
+            <br>We'll have hot food, cold drinks, and big screens; all that's missing is you!</b></p>
+            <h6>The party will be at 1234 Main St, Anytown, USA</h6>
+            <br>
+            <div class="able">
+                <button class="ton">I can make it!</button>
+                <button class="ton">I can't make it</button>
+            </div>
+            <h6>Questions? Call 555.123.4567</h6>
+            <br>
         </div>
     </body>
 </html>
