--- a/projects/restaurant/menu.html
+++ b/projects/restaurant/menu.html
@@ -8,128 +8,137 @@
     </head>
     <body>
         <div id="navbar-2">
-            <a id="logo" href="#"><img src="images/emerald.png" alt="logo" width="45"></a>
-            <div class="dropdown-container">
+            <a id="logo" href="home.html"><img src="images/emerald.png" alt="logo" width="45"></a>
+            <div class="dropdown-container-2">
                 <a id="two" href="#">Menu<i class="fa fa-chevron-down" aria-hidden="true"></i></a>
-                <div class="dropdown-menu">
-                    <a href="#">Starters</a>
-                    <a href="#">Mains</a>
+                <div class="dropdown-menu-2">
+                    <a href="#">Sides</a>
+                    <a href="#main-courses">Mains</a>
                     <a href="#">Desserts</a>
-                    <a href="#">Beverages</a>
+                    <a href="#beverages">Beverages</a>
                 </div>
             </div>
-            <div class="dropdown-container">
+            <div class="dropdown-container-2">
                 <a id="two" href="#">About <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
-                <div class="dropdown-menu">
+                <div class="dropdown-menu-2">
                     <a href="#">Our Mission</a>
                     <a href="#">Locations</a>
                     <a href="#">Sitemap</a>
                 </div>
             </div>
-            <div class="dropdown-container">
+            <div class="dropdown-container-2">
                 <a id="two" href="#">Contact <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
-                <div class="dropdown-menu">
+                <div class="dropdown-menu-2">
                     <a href="#">Company Number</a>
                     <a href="#">LinkTree</a>
                     <a href="#">Job Application</a>
                 </div>
             </div>
         </div>
-        <div id="header">
+        <div id="header-2">
             <br>
             <h1>This Week's Special</h1><button class="headerbutton">Order Now</button>
             <br>
         </div>
-        <br>
-        <div class="content">
-           <div class="sub-content">
-                <h2>Main Courses</h2>
-                <div id="card">
-                    <a>
-                        <img class="food" src="images/pibil-rice.jpg" alt="pibil-rice" width="">
-                        <h4>Pibil Rice</h4>
-                        <p>
-                            Spinach rice with pork
-                        </p>
-                    </a>
-                </div>
-                <div id="card">
-                    <a>
-                        <img class="food" src="images/subanik.webp" alt="subanik" width="">
-                        <h4>Subanik</h4>
-                        <p>
-                            Beef, chicken, pork, tomatillos, tomatoes,<br>
-                            chilipeppers and bell peppers all in one<br>
-                            spectacular stew
-                        </p>
-                    </a>
-                </div>
-                <div id="card">
-                    <a>
-                        <img class="food" src="images/tenders.jpg" alt="tenders" width="">
-                        <h4>Chicharrones de Pollo</h4>
-                        <p>
-                            Crispy fried chicken tenders
-                        </p>
-                    </a>
-                </div>
-                <div id="card">
-                    <a>
-                        <img class="food" src="images/Easy-Picadillo-Recipe-7.jpg" alt="Easy-Picadillo-Recipe-7" width="">
-                        <h4>Picadillo</h4>
-                        <p>
-                            Non-spicy, savory chili
-                        </p>
-                    </a>
-                </div>
-                <div id="card">
-                    <a>
-                        <img class="food" src="images/Guarare__mofongo_de_camarones.0.jpg" alt="Guarare__mofongo_de_camarones" width="">
-                        <h4>Criollo Mofongo</h4>
-                        <p>
-                            Beer stewed criollo shrimp in slow fried<br>
-                            plantains
-                        </p>
-                    </a>
-                </div>
-                <div id="card">
-                    <a>
-                        <img  class="food" src="images/lobster-tail.jpeg" alt="lobster-tail" width="">
-                        <h4>Carribean Lobster</h4>
-                        <p>
-                            Most of the meat is in the tail
-                        </p>
-                    </a>
-                </div>
-           </div>
-            <div class="sub-content">
-                <h4>Beverages</h4>
-                <div id="card">
-                    <a>
-                        <img class="food" src="images/layered-fruit-smoothie-su.jpg" alt="layered-fruit-smoothie-su" width="">
-                        <h4>Bi-bi Berry Blast</h4>
-                        <p>
-                            Two fruit smoothies layered into one
-                        </p>
-                    </a>
-                </div>
-                <div id="card">
-                    <a>
-                        <img class="food" src="images/coquito.jpg" alt="coquito" width="">
-                        <h4>Coquito</h4>
-                        <p>
-                            Cinnamon and coconut with rum
-                        </p>
-                    </a>
-                </div>
-                <div id="card">
-                    <a>
-                        <img class="food" src="images/Sorrel-Spritz-Mocktail-1x1-1.jpg" alt="Sorrel-Spritz-Mocktail-1x1-1" width="">
-                        <h4>Sorell Cocktail</h4>
-                        <p>
-                            Brewed ginger drink
-                        </p>
-                    </a>
+        <div class="center-column-2">
+            <br>
+            <h2 id="main-courses">Main Courses</h2>
+            <div class="content">
+                    <div class="sub-content">
+                       <div id="row-1">
+                            <div id="card">
+                                <a>
+                                    <img class="foods" src="images/pibil-rice.jpg" alt="pibil-rice" width="">
+                                    <h4>Pibil Rice</h4>
+                                    <h5>
+                                        Spinach rice with pork
+                                    </h5>
+                                </a>
+                            </div>
+                            <div id="card">
+                                <a>
+                                    <img class="foods" src="images/subanik.webp" alt="subanik" width="">
+                                    <h4>Subanik</h4>
+                                    <h5>
+                                        Beef, chicken, pork,<br>tomatillos, tomatoes,<br>
+                                        chilipeppers and bell<br>peppers all in one<br>
+                                        spectacular stew
+                                    </h5>
+                                </a>
+                            </div>
+                       </div>
+                        <div id="row-2">
+                            <div id="card">
+                                <a>
+                                    <img class="foods" src="images/tenders.jpg" alt="tenders" width="">
+                                    <h4>Chicharrones<br>de Pollo</h4>
+                                    <h5>
+                                        Crispy fried chicken<br>tenders
+                                    </h5>
+                                </a>
+                            </div>
+                            <div id="card">
+                                <a>
+                                    <img class="foods" src="images/Easy-Picadillo-Recipe-7.jpg" alt="Easy-Picadillo-Recipe-7" width="">
+                                    <h4>Picadillo</h4>
+                                    <h5>
+                                        Non-spicy, savory chili
+                                    </h5>
+                                </a>
+                            </div>
+                        </div>
+                        <div id="row-3">
+                            <div id="card">
+                                <a>
+                                    <img class="foods" src="images/Guarare__mofongo_de_camarones.0.jpg" alt="Guarare__mofongo_de_camarones" width="">
+                                    <h4>Criollo<br>Mofongo</h4>
+                                    <h5>
+                                        Beer stewed criollo<br>shrimp in slow fried<br>
+                                        plantains
+                                    </h5>
+                                </a>
+                        </div>
+                            <div id="card">
+                                <a>
+                                    <img  class="foods" src="images/lobster-tail.jpeg" alt="lobster-tail" width="">
+                                    <h4>Carribean<br>Lobster</h4>
+                                    <h5>
+                                        Most of the meat is in<br>the tail
+                                    </h5>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                <br>
+                <h2 id="beverages">Beverages</h2>
+                <div class="sub-content">
+                    <div id="card-2">
+                        <a>
+                         <img class="food" src="images/layered-fruit-smoothie-su.jpg" alt="layered-fruit-smoothie-su" width="">
+                            <h4>Bi-bi Berry<br>Blast</h4>
+                            <h5>
+                                Two fruit<br>smoothies<br>layered into<br>one
+                            </h5>
+                        </a>
+                    </div>
+                    <div id="card-2">
+                        <a>
+                            <img class="food" src="images/coquito.jpg" alt="coquito" width="">
+                            <h4>Coquito</h4>
+                            <h5>
+                                Cinnamon<br>and coconut<br>with rum
+                            </h5>
+                        </a>
+                    </div>
+                    <div id="card-2">
+                        <a>
+                            <img class="food" src="images/Sorrel-Spritz-Mocktail-1x1-1.jpg" alt="Sorrel-Spritz-Mocktail-1x1-1" width="">
+                            <h4>Sorell<br>Cocktail</h4>
+                            <h5>
+                                Brewed ginger<br>drink
+                            </h5>
+                        </a>
+                    </div>
                 </div>
            </div>
         </div>
