--- a/projects/restaurant/home.html
+++ b/projects/restaurant/home.html
@@ -70,7 +70,7 @@
                     </a>
                 </div>
                 <div id="card">
-                    <a href="menu.html">
+                    <a href="menu.html#beverages">
                         <img class="foods" src="images/coquito.jpg" alt="coquito" width="">
                         <h4>Beverages</h4>
                         <p>
