--- a/projects/dropdown-menu-site/hamsuke.html
+++ b/projects/dropdown-menu-site/hamsuke.html
@@ -36,8 +36,8 @@
         </div>
         <br>
         <div id="info">
-            <h1>Trashcan</h1>
-            <img src="images/trashcan.png" alt="trashcan">
+            <h1>Hamsuke</h1>
+            <img src="images/hamsuke.jpg" alt="toothless">
             <p>
 
             </p>
