--- a/projects/dropdown-menu-site/index.html
+++ b/projects/dropdown-menu-site/index.html
@@ -42,23 +42,23 @@
         <br>
         <div id="row-1">
             <div class="card">
-                <a>
-                 <img src="images/romulus.png" alt="romulus" width="320px" height="427">
+                <a href="#">
+                 <img class="foods" src="images/romulus.png" alt="romulus">
                  <h4>Romulus</h4>
                  <button class="content">Learn More</button>
                 </a>
             </div>
             <div class="card" id="card-2">
-                <a>
-                    <img src="images/toothless-has-always-been-cute-v0-cs452ufwrg8e1.webp" alt="toothless-has-always-been-cute-v0-cs452ufwrg8e1" width="320px" height="427">
+                <a href="toothless.html">
+                    <img class="foods" src="images/toothless.png" alt="toothless">
                     <h4>Toothless</h4>
                  <button class="content">Learn More</button>
                 </a>
             </div>
             <div class="card">
-                <a>
-                    <img src="images/remus.png" alt="remus" width="320px" height="427">
-                    <h4>Remus</h4>
+                <a href="hamsuke.html">
+                    <img class="foods" src="images/hamsuke.jpg" alt="hamsuke">
+                    <h4>Hamsuke</h4>
                  <button class="content">Learn More</button>
                 </a>
             </div>
@@ -67,21 +67,21 @@
         <div id="row-2">
             <div class="card">
                 <a href="trashcan.html">
-                 <img src="images/trashcan.png" alt="trashcan" width="320px" height="427">
+                 <img class="foods" src="images/trashcan.png" alt="trashcan">
                  <h4>Trashcan</h4>
                  <button class="content">Learn More</button>
                 </a>
             </div>
             <div class="card" id="card-2">
-                <a>
-                    <img src="images/taiga.png" alt="taiga" width="320px" height="427">
+                <a href="#">
+                    <img class="foods" src="images/taiga.png" alt="taiga">
                     <h4>Taiga</h4>
                  <button class="content">Learn More</button>
                 </a>
             </div>
             <div class="card">
-                <a>
-                    <img src="images/mug.png" alt="mug" width="320px" height="427">
+                <a href="#">
+                    <img class="foods" src="images/mug.png" alt="mug">
                     <h4>Mug</h4>
                  <button class="content">Learn More</button>
                 </a>
