--- a/projects/dropdown-menu-site/trashcan.html
+++ b/projects/dropdown-menu-site/trashcan.html
@@ -9,7 +9,7 @@
     <body>
         
         <div id="navbar">
-            <a id="logo" href="#">AdoptMePlz<img src="images/logo.png" alt="logo" width="25"></a>
+            <a id="logo" href="index.html">AdoptMePlz<img src="images/logo.png" alt="logo" width="25"></a>
             <div class="dropdown-container">
                 <a href="#">Gallery <i class="fa fa-chevron-down" aria-hidden="true"></i></a>
                 <div class="dropdown-menu">
@@ -34,13 +34,15 @@
                 </div>
             </div>
         </div>
+        <div class="center-column">
         <br>
-        <div id="info">
-            <h1>Trashcan</h1>
-            <img src="images/trashcan.png" alt="trashcan">
-            <p>
+            <div id="info">
+                <h1>Trashcan</h1>
+                <img class="food" src="images/trashcan.png" alt="trashcan">
+                <p>
 
-            </p>
+                </p>
+            </div>
         </div>
     </body>
 </html>
